# quicktill-tillweb

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.prod  README.md  database_name  docker-compose.yml  pyproject.toml  requirements.txt  till_name  tillweb-nginx-configuration
docker/: build-prod.sh  docker-compose.prod.yml  startup-dev.sh  startup-prod.sh
docker/data/: Dockerfile  emfcamp2022-anonymised.sql
docker/static/: Dockerfile  null-secret
emf/: admin.py  api.py  api_objects.py  apps.py  display.py  middleware.py  models.py  redis2websocket.py  till2redis.py  tilldb.py  urls.py  views.py
emf/management/commands/: redis2mqtt.py  redis2websocket.py  till2redis.py
emf/migrations/: 0001_initial.py  0002_page.py  0003_displaypage.py  0004_alter_page_path.py  0005_alter_displaypage_template.py
emf/static/emf/: bargraph.css  display.css  display.js  fonts.css  style.css  tapboard-manifest.json  tapboard.js
emf/static/emf/css/: bargraph.css  display.css  style.css  tapboard.css
emf/static/emf/fonts/: fonts.css
emf/static/emf/js/: barboard.js  cellarboard.js  display.js  tapboard.js
emf/static/emf/scss/: barboard.scss  bargraph.scss  display.scss  style.scss  tapboard.scss  whatson.scss
emf/templates/emf/: ales.html  barboard.html  base.html  cellarboard.html  charts.html  display-bar-fun-facts.html  display-cans-and-bottles.html  display-club-mate.html  display-on-tap.html  display-progress.html  display-sessions.html  display-snacks.html  display-soft-drinks.html  display-spirits-and-mixers.html  display-wines-and-spirits.html  display-wines.html  display.html  jontyfacts.html  ontap-lines.html  page.html  pricelist.html  tapboard-sw.js  tapboard.html  whatson.html
markup/: mdx_plimg.py
markup/templatetags/: markup.py
static-dist/emf/: display.css
systemd/: setup.sh  tillweb-uwsgi.conf
templates/: base.html
templates/emf/: display-cans-and-bottles.html  display-club-mate.html  display-progress.html  display-soft-drinks.html  display-wines-and-spirits.html  display.html  refusals.html  whatson.html
templates/photologue/: root.html
templates/registration/: login.html  profile.html
tillweb_infra/: context_processors.py  emfurls.py  emfviews.py  settings.py  settings_database.py  settings_emf.py  urls.py  views.py
