[tool.poetry]
name = "emftillweb"
version = "0.2.0"
description = "bar.emfcamp.org web service"
authors = ["Stephen Early <steve@assorted.org.uk>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Django = "~3.2"
django-bootstrap-breadcrumbs = "~0.9"
django-widget-tweaks = "~1.4"
matplotlib = "~3.1"
psycopg2 = "~2.9"
pillow = "~9.0"
odfpy = "~1.4"
sqlalchemy = "~1.3"
quicktill = { git = "https://github.com/sde1000/quicktill.git", rev = "74f5d18c6136f2b1b27c96426a9af76e0b1635da" }
sorl-thumbnail = "^12.8"
django-photologue = "^3.15"
markdown = "^3.3"
gunicorn = "^20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
