[tool.poetry]
name = "emftillweb"
version = "0.3.0"
description = "bar.emf.camp web service"
authors = ["Stephen Early <steve@assorted.org.uk>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "tillweb_infra"},
    {include = "emf"},
    {include = "markup"},
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "~5.0"
django4-bootstrap-breadcrumbs = "~0.10"
django-widget-tweaks = "~1.5"
psycopg2 = "~2.9"
odfpy = "~1.4"
sqlalchemy = "~1.4"
quicktill = { git = "https://github.com/sde1000/quicktill.git", rev = "c2791b023ed99c3aaca0882d11bbb3e7e75e19da" }
sorl-thumbnail = "^12.8"
django-photologue = "^3"
markdown = "^3.5"
gunicorn = "^21.0"
requests-oauthlib = "^1.3"
redis = "^5"
sdnotify = "^0.3"
websockets = "^12.0"
django-sass = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
